--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-gallery": "^1.3.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-remove-scroll": "^2.5.10",
     "react-router-dom": "^6.26.1",
